# NAI

lab1/: main.cpp
lab2/: CMakeLists.txt  lab02.cpp
lab3/: CMakeLists.txt  lab03.cpp
lab4/: CMakeLists.txt  lab4.cpp
lab5/: main.cpp
lab6/: CMakeLists.txt  main.cpp
lab7/: CMakeLists.txt  clion-opencv.bat  main.cpp
lab8/: CMakeLists.txt  main.cpp
